# Smart-Notification-via-D-Bus

./: CMakeLists.txt  LICENSE  README.md  client.cpp  notification.xml  server.cpp
